<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingTop="50sp"
            android:text="@string/main_text_authorization"
            android:textAlignment="center"
            android:textColor="@color/colorOrangeText"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editText_main_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/fields"
            android:ems="10"
            android:hint="@string/main_editText_email"
            android:inputType="textEmailAddress" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editText_main_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="50sp"
            android:background="@drawable/fields"
            android:ems="10"
            android:hint="@string/main_editText_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:layout_marginBottom="110sp"
        android:background="@drawable/button"
        android:text="@string/main_button_sign_in"
        android:textColor="@color/colorOrangeText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="60sp"
        android:layout_marginBottom="50sp"
        android:background="@drawable/button"
        android:text="@string/main_button_registration"
        android:textColor="@color/colorOrangeText"
        android:textSize="18sp" />

</RelativeLayout>